--- a/themes/style/preso.css
+++ b/themes/style/preso.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 .deck-container {
   font-family: "museo", serif;
-  color: #505050;
+  color: #333;
   font-size: 1.75em;
-  background: #EEF0E6; }
+  background: #f4f6f1; }
   .deck-container > .slide {
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5); }
     .deck-container > .slide .deck-before, .deck-container > .slide .deck-previous {
@@ -12,128 +12,129 @@
         opacity: 1; }
     .deck-container > .slide .deck-child-current {
       opacity: 1; }
-  .deck-container .slide h1, .deck-container .slide h2, .deck-container .slide h3, .deck-container .slide h4, .deck-container .slide h5, .deck-container .slide h6 {
-    font-family: "anivers",sans-serif;
-    color: #505050; }
-  .deck-container .slide h1 {
-    color: #08455f; }
-  .deck-container .slide h3.subhead {
-    padding-top: 2.5em;
-    margin-bottom: -34px;
-    font-size: 18px; }
-  .deck-container .slide h2 {
-    color: #0b7495;
-    border-bottom: 0;
-    text-shadow: 2px 2px #fff;
-    margin-bottom: .2em; }
-  .deck-container .slide pre {
-    border-color: #cde;
-    background: #fff;
-    position: relative;
-    z-index: auto;
-    /* http://nicolasgallagher.com/css-drop-shadows-without-images/ */ }
-    .borderradius .deck-container .slide pre {
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px; }
-    .csstransforms.boxshadow .deck-container .slide pre > :first-child:before {
-      content: "";
-      position: absolute;
-      z-index: -1;
+  .deck-container .slide {
+    color: #333; }
+    .deck-container .slide h1, .deck-container .slide h2, .deck-container .slide h3, .deck-container .slide h4, .deck-container .slide h5, .deck-container .slide h6 {
+      font-family: "gesta",sans-serif;
+      color: #505050;
+      text-shadow: 2px 2px #fff; }
+    .deck-container .slide h1 {
+      color: #484c42; }
+    .deck-container .slide h3.subhead {
+      padding-top: 2.5em;
+      margin-bottom: -34px;
+      font-size: 18px; }
+    .deck-container .slide h2 {
+      color: #484c42;
+      border-bottom: 0;
+      text-shadow: 2px 2px #fff;
+      margin-bottom: .2em; }
+    .deck-container .slide pre {
+      border-color: #cde;
       background: #fff;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0; }
-    .csstransforms.boxshadow .deck-container .slide pre:before, .csstransforms.boxshadow .deck-container .slide pre:after {
-      content: "";
-      position: absolute;
-      z-index: -2;
-      bottom: 15px;
-      width: 50%;
-      height: 20%;
-      max-width: 300px;
-      -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-      -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-      box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7); }
-    .csstransforms.boxshadow .deck-container .slide pre:before {
-      left: 10px;
-      -webkit-transform: rotate(-3deg);
-      -moz-transform: rotate(-3deg);
-      -ms-transform: rotate(-3deg);
-      -o-transform: rotate(-3deg);
-      transform: rotate(-3deg); }
-    .csstransforms.boxshadow .deck-container .slide pre:after {
-      right: 10px;
-      -webkit-transform: rotate(3deg);
-      -moz-transform: rotate(3deg);
-      -ms-transform: rotate(3deg);
-      -o-transform: rotate(3deg);
-      transform: rotate(3deg); }
-  .deck-container .slide li > ul {
-    margin-bottom: 0; }
-  .deck-container .slide code {
-    color: #789; }
-  .deck-container .slide blockquote {
-    font-family: "Hoefler Text", Constantia, Palatino, "Palatino Linotype", "Book Antiqua", Georgia, serif;
-    font-size: 2em;
-    padding: 1em 2em .5em 2em;
-    color: #000;
-    background: #fff;
-    position: relative;
-    border: 1px solid #cde;
-    z-index: auto; }
-    .borderradius .deck-container .slide blockquote {
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px; }
-    .boxshadow .deck-container .slide blockquote > :first-child:before {
-      content: "";
-      position: absolute;
-      z-index: -1;
+      position: relative;
+      z-index: auto;
+      /* http://nicolasgallagher.com/css-drop-shadows-without-images/ */ }
+      .borderradius .deck-container .slide pre {
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px; }
+      .csstransforms.boxshadow .deck-container .slide pre > :first-child:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        background: #fff;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0; }
+      .csstransforms.boxshadow .deck-container .slide pre:before, .csstransforms.boxshadow .deck-container .slide pre:after {
+        content: "";
+        position: absolute;
+        z-index: -2;
+        bottom: 15px;
+        width: 50%;
+        height: 20%;
+        max-width: 300px;
+        -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
+        -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
+        box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7); }
+      .csstransforms.boxshadow .deck-container .slide pre:before {
+        left: 10px;
+        -webkit-transform: rotate(-3deg);
+        -moz-transform: rotate(-3deg);
+        -ms-transform: rotate(-3deg);
+        -o-transform: rotate(-3deg);
+        transform: rotate(-3deg); }
+      .csstransforms.boxshadow .deck-container .slide pre:after {
+        right: 10px;
+        -webkit-transform: rotate(3deg);
+        -moz-transform: rotate(3deg);
+        -ms-transform: rotate(3deg);
+        -o-transform: rotate(3deg);
+        transform: rotate(3deg); }
+    .deck-container .slide li > ul {
+      margin-bottom: 0; }
+    .deck-container .slide code {
+      color: #789; }
+    .deck-container .slide blockquote {
+      font-size: 1.5em;
+      padding: 1em 2em .5em 2em;
       background: #fff;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0; }
-    .boxshadow .deck-container .slide blockquote:after {
-      content: "";
-      position: absolute;
-      z-index: -2;
-      top: 10px;
-      bottom: 10px;
-      left: 0;
-      right: 50%;
-      -moz-border-radius: 10px/100px;
-      border-radius: 10px/100px;
-      -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-      -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.6); }
-    .deck-container .slide blockquote p {
-      margin: 0; }
-    .deck-container .slide blockquote cite {
-      font-size: .3em;
-      color: #ccc; }
-    .deck-container .slide blockquote:before {
-      content: "“";
-      position: absolute;
-      top: 0;
-      left: 0;
-      font-size: 5em;
-      line-height: 1;
-      color: #ccf0f0;
-      z-index: 1; }
-  .deck-container .slide ::-moz-selection {
-    background: #08455f;
-    color: #fff; }
-  .deck-container .slide ::selection {
-    background: #08455f;
-    color: #fff; }
-  .deck-container .slide a, .deck-container .slide a:hover, .deck-container .slide a:focus, .deck-container .slide a:active, .deck-container .slide a:visited {
-    color: #599;
-    text-decoration: none; }
-  .deck-container .slide a:hover, .deck-container .slide a:focus {
-    text-decoration: underline; }
+      position: relative;
+      border: 1px solid #cde;
+      z-index: auto; }
+      .borderradius .deck-container .slide blockquote {
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px; }
+      .boxshadow .deck-container .slide blockquote > :first-child:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        background: #fff;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0; }
+      .boxshadow .deck-container .slide blockquote:after {
+        content: "";
+        position: absolute;
+        z-index: -2;
+        top: 10px;
+        bottom: 10px;
+        left: 0;
+        right: 50%;
+        -moz-border-radius: 10px/100px;
+        border-radius: 10px/100px;
+        -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.6); }
+      .deck-container .slide blockquote p {
+        margin: 0; }
+      .deck-container .slide blockquote cite {
+        font-size: .3em;
+        color: #ccc; }
+      .deck-container .slide blockquote:before {
+        content: "“";
+        position: absolute;
+        top: 0;
+        left: 0;
+        font-size: 5em;
+        line-height: 1;
+        color: #ccf0f0;
+        z-index: 1; }
+    .deck-container .slide ::-moz-selection {
+      background: #08455f;
+      color: #fff; }
+    .deck-container .slide ::selection {
+      background: #08455f;
+      color: #fff; }
+    .deck-container .slide a, .deck-container .slide a:hover, .deck-container .slide a:focus, .deck-container .slide a:active, .deck-container .slide a:visited {
+      color: #599;
+      text-decoration: none; }
+    .deck-container .slide a:hover, .deck-container .slide a:focus {
+      text-decoration: underline; }
   .deck-container .deck-prev-link, .deck-container .deck-next-link {
     background: #fff;
     opacity: 0.5;
