--- a/themes/style/preso.css
+++ b/themes/style/preso.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 .deck-container {
   font-family: "museo", serif;
-  color: #333;
+  color: #444;
   font-size: 1.75em;
-  background: #f4f6f1; }
+  background: #fefdf4; }
   .deck-container > .slide {
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5); }
     .deck-container > .slide .deck-before, .deck-container > .slide .deck-previous {
@@ -13,19 +13,20 @@
     .deck-container > .slide .deck-child-current {
       opacity: 1; }
   .deck-container .slide {
-    color: #333; }
+    color: #444; }
     .deck-container .slide h1, .deck-container .slide h2, .deck-container .slide h3, .deck-container .slide h4, .deck-container .slide h5, .deck-container .slide h6 {
       font-family: "gesta",sans-serif;
       color: #505050;
       text-shadow: 2px 2px #fff; }
     .deck-container .slide h1 {
-      color: #484c42; }
+      color: #79aeb6;
+      text-shadow: 2px 2px #fff; }
     .deck-container .slide h3.subhead {
       padding-top: 2.5em;
       margin-bottom: -34px;
       font-size: 18px; }
     .deck-container .slide h2 {
-      color: #484c42;
+      color: #79aeb6;
       border-bottom: 0;
       text-shadow: 2px 2px #fff;
       margin-bottom: .2em; }
